--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,19 +289,23 @@ jobs:
       - run: 
           name: Install dependencies
           command: |
-              apk add --update ansible
-              pip install awscli
-              apk add --update --no-cache gzip nodejs npm curl
+                apk add --update --no-cache tar gzip rsync nodejs npm  ansible curl openssh
+                pip install awscli
       - run: 
           name: Deploy backend
           command: |
-              tar -C backend -czvf artifact.tar.gz .
-              mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-              mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
-              cd .circleci/ansible
-              echo "Contents  of the inventory.txt file is -------"
-              cat inventory.txt
-              ansible-playbook -i inventory.txt deploy-backend.yml
+                cd backend
+                npm install
+                npm run build
+                cd ..
+                tar -C backend -czvf artifact.tar.gz .
+                mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+                cp artifact.tar.gz  .circleci/ansible/roles/deploy/files/
+                ls .circleci/ansible/roles/deploy/files/
+                cd .circleci/ansible
+                echo 54.205.181.113 >> inventory.txt
+                echo "Contents  of the inventory.txt file is ------$(cat inventory.txt)"
+                ansible-playbook -i inventory.txt deploy-backend.yml
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
