--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,243 +38,243 @@ commands:
 
 
 jobs:
-  # build-frontend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore npm cache
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: build-frontend
-  #         command: |
-  #           cd frontend
-  #           npm install
-  #           npm run build 
-  #     - save_cache:
-  #         paths: [frontend/node_modules]
-  #         key: frontend-build
+  build-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore npm cache
+          keys: [frontend-build]
+      - run:
+          name: build-frontend
+          command: |
+            cd frontend
+            npm install
+            npm run build 
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build
 
 
 
-  # build-backend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore npm package cache
-  #         keys: [backend-build]
-  #     - run:
-  #         name: build-backend
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run build
-  #     - save_cache:
-  #         paths: [backend/node_modules]
-  #         key: backend-build
+  build-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore npm package cache
+          keys: [backend-build]
+      - run:
+          name: build-backend
+          command: |
+            cd backend
+            npm install
+            npm run build
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
 
-  # test-frontend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore cache
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: test-frontend
-  #         command: |
-  #             cd frontend
-  #             npm install
-  #             npm run test
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore cache
+          keys: [frontend-build]
+      - run:
+          name: test-frontend
+          command: |
+              cd frontend
+              npm install
+              npm run test
 
-  # test-backend:
-  #   docker: 
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore npm package cache
-  #         keys: [backend-build]
-  #     - run:
-  #         name: test-backend
-  #         command: |
-  #             cd backend
-  #             npm install
-  #             npm run test
+  test-backend:
+    docker: 
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore npm package cache
+          keys: [backend-build]
+      - run:
+          name: test-backend
+          command: |
+              cd backend
+              npm install
+              npm run test
       
 
 
-  # scan-frontend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore cache
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: scan-frontend
-  #         command: |
-  #             cd frontend
-  #             npm install
-  #             npm audit fix --force
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore cache
+          keys: [frontend-build]
+      - run:
+          name: scan-frontend
+          command: |
+              cd frontend
+              npm install
+              npm audit fix --force
 
 
 
-  # scan-backend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         name: Restore cache
-  #         keys: [backend-build]
-  #     - run:
-  #         name: scan-backend
-  #         command: |
-  #             cd backend
-  #             npm install
-  #             npm fund
-  #             npm audit fix --force
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore cache
+          keys: [backend-build]
+      - run:
+          name: scan-backend
+          command: |
+              cd backend
+              npm install
+              npm fund
+              npm audit fix --force
 
-  # deploy-infrastructure:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: yum install -y tar gzip
-  #     - run:
-  #         name: ensure backend infrastructure exists
-  #         command: |
-  #             aws cloudformation deploy \
-  #                     --template-file .circleci/files/backend.yml \
-  #                     --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #                     --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-  #                     --tags project=udapeople
-  #     - run:
-  #         name: Ensure frontend infrastructure exists 
-  #         command: |
-  #             aws cloudformation deploy \
-  #                     --template-file .circleci/files/frontend.yml \
-  #                     --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #                     --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
-  #                     --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+  deploy-infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: yum install -y tar gzip
+      - run:
+          name: ensure backend infrastructure exists
+          command: |
+              aws cloudformation deploy \
+                      --template-file .circleci/files/backend.yml \
+                      --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                      --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
+                      --tags project=udapeople
+      - run:
+          name: Ensure frontend infrastructure exists 
+          command: |
+              aws cloudformation deploy \
+                      --template-file .circleci/files/frontend.yml \
+                      --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                      --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
+                      --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
 
-  #     - run:
-  #         name: Add backend ip to ansible inventory
-  #         working_directory: ./.circleci/ansible
-  #         command: |
-  #             aws ec2 describe-instances \
-  #                   --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #                   --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #                   --output text >> inventory.txt
-  #             cat inventory.txt
-  #     - persist_to_workspace:
-  #         root: ~/
-  #         paths:
-  #           - project/.circleci/ansible/inventory.txt
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - run:
+          name: Add backend ip to ansible inventory
+          working_directory: ./.circleci/ansible
+          command: |
+              aws ec2 describe-instances \
+                    --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                    --filters "Name=tag:Project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                    --output text >> inventory.txt
+              cat inventory.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/inventory.txt
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-  # configure-server:
-  #   docker:
-  #     - image: python:3.9.0-alpine
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints: ["ff:36:ea:ad:ae:f0:27:84:c1:45:fb:f6:bb:6d:3e:e9"]
-  #     - attach_workspace:
-  #         at: .
-  #     - run:
-  #         name: Install dependencies
-  #         working_directory: ./.circleci/ansible
-  #         command: |
-  #           apk add --update ansible
-  #           ansible --version
-  #     - run:
-  #         name: Configure server
-  #         working_directory: ./.circleci/ansible
-  #         command: |
-  #           pwd &&
-  #           ls -la
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt configure-server.yml
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-
-
-  # run-migrations:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install AWS CLI dependencies
-  #         command: |
-  #             sudo apt-get update 
-  #             sudo apt-get upgrade -y
-  #             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-  #             unzip awscliv2.zip
-  #             sudo ./aws/install
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #             cd backend
-  #             npm install
-  #             npm run migrations --force > migrations.txt
-  #             cat migrations.txt
-  #     - run: 
-  #         name: Send Migration results to kvdb
-  #         command: |
-  #             cat ~/project/backend/migrations.txt
-  #             if grep -q "has been executed successfully" ~/project/backend/migrations.txt
-  #             then
-  #               echo "DB migration was successful, will update kvdb..."
-  #               curl "https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}"  -d '1'
-  #             fi 
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  configure-server:
+    docker:
+      - image: python:3.9.0-alpine
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["ff:36:ea:ad:ae:f0:27:84:c1:45:fb:f6:bb:6d:3e:e9"]
+      - attach_workspace:
+          at: .
+      - run:
+          name: Install dependencies
+          working_directory: ./.circleci/ansible
+          command: |
+            apk add --update ansible
+            ansible --version
+      - run:
+          name: Configure server
+          working_directory: ./.circleci/ansible
+          command: |
+            pwd &&
+            ls -la
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Install AWS CLI dependencies
+          command: |
+              sudo apt-get update 
+              sudo apt-get upgrade -y
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              unzip awscliv2.zip
+              sudo ./aws/install
+      - run:
+          name: Run migrations
+          command: |
+              cd backend
+              npm install
+              npm run migrations --force > migrations.txt
+              cat migrations.txt
+      - run: 
+          name: Send Migration results to kvdb
+          command: |
+              cat ~/project/backend/migrations.txt
+              if grep -q "has been executed successfully" ~/project/backend/migrations.txt
+              then
+                echo "DB migration was successful, will update kvdb..."
+                curl "https://kvdb.io/LwfjS5JcxvnfaZhWDgyGw8/migration_${CIRCLE_WORKFLOW_ID:0:7}"  -d '1'
+              fi 
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-  # deploy-frontend:
-  #   docker:
-  #     - image: python:3.7-alpine3.16
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [frontend-build]
-  #     - run: 
-  #         name: Install dependencies 
-  #         command: |
-  #             apk add --update ansible tar curl nodejs npm
-  #             pip install awscli
-  #     - run: 
-  #         name: Get backend url
-  #         command: |     
-  #             export BACKEND_IP=$(aws ec2 describe-instances \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --filters "Name=tag:Project,Values=udapeople" \
-  #             --output text)
-  #             echo "${API_URL}"
-  #             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-  #             cat frontend/.env
-  #     - run: 
-  #         name: Deploy frontend objects
-  #         command: |
-  #             cd frontend
-  #             npm install
-  #             npm run build
-  #             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-  #             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+
+  deploy-frontend:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run: 
+          name: Install dependencies 
+          command: |
+              apk add --update ansible tar curl nodejs npm
+              pip install awscli
+      - run: 
+          name: Get backend url
+          command: |     
+              export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Project,Values=udapeople" \
+              --output text)
+              echo "${API_URL}"
+              echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+              cat frontend/.env
+      - run: 
+          name: Deploy frontend objects
+          command: |
+              cd frontend
+              npm install
+              npm run build
+              tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+              aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
   deploy-backend:
@@ -310,69 +310,69 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
-  # smoke-test:
+  smoke-test:
 
-  #   docker:
-  #     - image: python:3.7-alpine3.11
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           apk add --update ansible
-  #           pip install awscli
-  #           apk add --update --no-cache tar gzip nodejs npm curl
-  #     - run:
-  #         name: Backend smoke test.
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #           --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #           --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
-  #           --output text)
-  #            export API_URL="http://${BACKEND_IP}:3030"
-  #            echo $API_URL
-  #            if curl "${API_URL}/api/status" | grep "ok"
-  #            then
-  #                return 0
-  #            else
-  #                return 1
-  #            fi
-  #     - run:
-  #          name: Frontend smoke test.
-  #          command: |
-  #            export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-  #            echo ${URL}
-  #            if curl -s ${URL} | grep "Welcomee"
-  #            then
-  #              return 0
-  #            else
-  #              return 1
-  #            fi
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible
+            pip install awscli
+            apk add --update --no-cache tar gzip nodejs npm curl
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text)
+             export API_URL="http://${BACKEND_IP}:3030"
+             echo $API_URL
+             if curl "${API_URL}/api/status" | grep "ok"
+             then
+                 return 0
+             else
+                 return 1
+             fi
+      - run:
+           name: Frontend smoke test.
+           command: |
+             export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+             echo ${URL}
+             if curl -s ${URL} | grep "Welcomee"
+             then
+               return 0
+             else
+               return 1
+             fi
     
 
 
 workflows:
   default:
     jobs:
-      #  - build-frontend
-      #  - build-backend
-      #  - test-frontend:
-      #      requires: [build-frontend]
-      #  - test-backend:
-      #      requires: [build-backend]
-      #  - scan-backend:
-      #      requires: [build-backend]
-      #  - scan-frontend:
-      #      requires: [build-frontend]
-      #  - deploy-infrastructure:
-      #      requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #  - configure-server:
-      #      requires: [deploy-infrastructure]
-      #  - run-migrations:
-      #      requires: [configure-server]
-      #  - deploy-frontend:
-      #      requires: [run-migrations]
-       - deploy-backend
-      #      requires: [run-migrations]
-      #  - smoke-test:
-      #      requires: [deploy-frontend, deploy-backend]
+       - build-frontend
+       - build-backend
+       - test-frontend:
+           requires: [build-frontend]
+       - test-backend:
+           requires: [build-backend]
+       - scan-backend:
+           requires: [build-backend]
+       - scan-frontend:
+           requires: [build-frontend]
+       - deploy-infrastructure:
+           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+       - configure-server:
+           requires: [deploy-infrastructure]
+       - run-migrations:
+           requires: [configure-server]
+       - deploy-frontend:
+           requires: [run-migrations]
+       - deploy-backend:
+           requires: [run-migrations]
+       - smoke-test:
+           requires: [deploy-frontend, deploy-backend]
